--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,11 +1,8 @@
 /* src/styles/Footer.css */
+
 .footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
   }
-  
