--- a/src/styles/Mindfulness.css
+++ b/src/styles/Mindfulness.css
@@ -1,26 +1,59 @@
 .mindfulness-container {
-    padding: 20px;
-  }
+  padding: 20px;
+}
+
+h1, h2 {
+  color: rgb(66, 106, 133);
   
-  h1, h2 {
-    color: #2C5364;
+}
+
+.folk-tales, .youtube-playlist, .audiobook-section, .user-content {
+  margin-bottom: 30px;
+}
+
+.video-container {
+  background-color: #f0f0f0;
+  height: 200px; /* This is a Placeholder size */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #999;
+}
+.youtube-playlist-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center; /* Center the videos */
+}
+
+.video-item {
+  width: 300px; /* Ensure the video items are the same width as the iframes */
+  height: 169px;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);}
+
+  .video-item iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    
   }
-  
-  .folk-tales, .youtube-playlist, .audiobook-section, .user-content {
-    margin-bottom: 30px;
-  }
-  
-  .video-container {
-    background-color: #f0f0f0;
-    height: 200px; /* This is a Placeholder size */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #999;
-  }
-  
-  p {
-    color: #666;
-    font-style: italic;
-  }
-  
+.meditation-centers {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #908f8f;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.meditation-centers iframe {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+
+p {
+  color: #666;
+  font-style: italic;
+}
